# epaper_frame-color

./: README.md  common_utils.py  config.xml  cycle_image.py  image_database.py  pisugar_battery.py  png_inventory.py  png_to_bmp.py  prepare_image.py  pyproject.toml  register_service.py  send_png_to_display.py
EPD_13in3e_Utility/: Makefile  main.c
EPD_13in3e_Utility/lib/Fonts/: fonts.h
EPD_13in3e_Utility/lib/GUI/: GUI_BMPfile.c  GUI_Paint.c  GUI_Paint.h
IT8951_Utility/: Makefile  main.c  main.h
PNG_to_BMP/: png_to_bmp.py
documentation/: construction.md  materials.md  software.md  wiring.key
